--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,8 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+#baseurl: ""
+baseurl: /richardkoranteng.github.io
 
 # ------------ The following options are not recommended to be modified ------------------
 
