--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,6 +7,6 @@
 # -------------------------------------
 
 Josh Johanning:
-  name: Josh Johanning
-  twitter: jjjettrain
-  url: https://github.com/joshjohanning/
+  name: Richard Koranteng
+  #twitter: rkkoranteng
+  url: https://github.com/rkkoranteng
