--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,7 +6,7 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-Josh Johanning:
+Richard Koranteng:
   name: Richard Koranteng
   #twitter: rkkoranteng
   url: https://github.com/rkkoranteng
