--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,5 +8,5 @@
 
 Richard Koranteng:
   name: Richard Koranteng
-  #twitter: rkkoranteng
+  twitter: rkkoranteng
   url: https://github.com/rkkoranteng
