--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/New_York
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: [r.k] # the main title
+title: r.K # the main title
 
 tagline: My agile Journey  # it will display as the sub-title
 
