--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/RKKoranteng # change to your github homepage
-    #- https://twitter.com/rkkoranteng # change to your twitter homepage
+    - https://twitter.com/rkkoranteng # change to your twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/richard-koranteng
