--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,4 +9,4 @@
 Richard Koranteng:
   name: Richard Koranteng
   twitter: rkkoranteng
-  url: https://github.com/rkkoranteng
+  url: https://rkkoranteng.com
