--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,7 +4,7 @@
 # documentation.
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: r.K : my-agile-journey
+name: blog - my-agile-journey
 
 on:
   # Runs on pushes targeting the default branch
